# aiidalab-qe

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  ;  Dockerfile  Dockerfile.arm  LICENSE  README.md  aiidalab_optimade  aiidalab_widgets_base  apt.txt  bands.py  bumpver_pre_commit.sh  calculation_history.ipynb  codes.py  cp2k.ipynb  cuds.py  custom.css  delete.ipynb  download.ipynb  examples.ipynb  job_list.ipynb  marketplace.py  metadata.json  metadata.yaml  node-view.ipynb  node_view.py  optimade  parameters.json  plugin_list.ipynb  plugin_manager.ipynb  plugin_manger.ipynb  plugins.yaml  postBuild  post_install  process.py  pseudos.py  (+22 more)
src/: README.md  setup.cfg
src/aiidalab_qe/: __init__.py  __main__.py  utils.py  version.py
src/aiidalab_qe/app/: __init__.py  app.py  main.py  steps.py  wizard_app.py  wrapper.py
src/aiidalab_qe/app/common/: __init__.py  node_view.py  panel.py  setup_codes.py
src/aiidalab_qe/app/configuration/: __init__.py  advanced.py  hubbard.py  magnetization.py  model.py  pseudos.py  smearing.py  step.py  workflow.py
src/aiidalab_qe/app/configuration/advanced/: __init__.py  advanced.py  hubbard.py  magnetization.py  model.py  pseudos.py  smearing.py  subsettings.py
src/aiidalab_qe/app/configuration/advanced/convergence/: __init__.py  convergence.py  model.py
src/aiidalab_qe/app/configuration/advanced/general/: __init__.py  general.py  model.py
src/aiidalab_qe/app/configuration/basic/: __init__.py  basic.py  model.py  workflow.py
src/aiidalab_qe/app/parameters/: __init__.py  qeapp.yaml
src/aiidalab_qe/app/plugins/bands/: __init__.py  setting.py
src/aiidalab_qe/app/result/: __init__.py  electronic_structure.py  model.py  report.py  step.py  summary_viewer.py  workchain_viewer.py
src/aiidalab_qe/app/result/components/: __init__.py
src/aiidalab_qe/app/result/components/status/: __init__.py  (+3 more)
src/aiidalab_qe/app/result/structure/: __init__.py  model.py  structure.py
src/aiidalab_qe/app/result/summary/: __init__.py  model.py  summary.py
src/aiidalab_qe/app/result/utils/: download_data.py
src/aiidalab_qe/app/result/viewer/: __init__.py  model.py  outputs.py  viewer.py
src/aiidalab_qe/app/static/: about.jinja  custom.css  custom.scss  guide.jinja  style.css  workflow_summary.jinja
src/aiidalab_qe/app/static/styles/: README.md  custom.css  infobox.css  results.css  status.css  structure.css  style.css  summary.css  variables.css
src/aiidalab_qe/app/static/templates/: about.jinja  calculation_history_guide.jinja  guide.jinja  plugin_manager.jinja  workflow_failure.jinja  workflow_list_summary.jinja  workflow_summary.jinja  workflow_table_summary.jinja
src/aiidalab_qe/app/structure/: __init__.py  model.py  step.py
src/aiidalab_qe/app/structure/examples/: Au.cif  CH3CHO.xyz  Co.cif  CoO.cif  Cu.cif  Diamond.cif  ETFA.xyz  GaAs.cif  GaAs.xyz  H2O.xyz  Li2CO3.cif  LiCoO2.cif  Ni.cif  Si.cif  SiO2.cif  SiO2.xyz
src/aiidalab_qe/app/submission/: __init__.py  model.py  resource.py  sssp.py  step.py
src/aiidalab_qe/app/submission/basic/: __init__.py  model.py  setting.py
src/aiidalab_qe/app/submission/code/: __init__.py  model.py
src/aiidalab_qe/app/submission/global_settings/: __init__.py  model.py  setting.py
src/aiidalab_qe/app/utils/: __init__.py  calculation_history.py  examples_importer.py  plugin_manager.py  search_jobs.py
src/aiidalab_qe/app/wizard/: __init__.py  model.py  wizard.py
src/aiidalab_qe/common/: __init__.py  bandpdoswidget.py  decorators.py  guide_manager.py  infobox.py  mixins.py  mvc.py  node_view.py  panel.py  process.py  setup_codes.py  setup_pseudos.py  time.py  widgets.py  wizard.py
src/aiidalab_qe/common/bands_pdos/: __init__.py  bandpdosplotly.py  bandpdoswidget.py  model.py  utils.py
src/aiidalab_qe/common/code/: __init__.py  model.py
src/aiidalab_qe/common/cookies/: __init__.py  cookie_manager.py  cookie_observer.js  cookie_observer.py
src/aiidalab_qe/common/link_button/: __init__.py  link_button.js  link_button.py
src/aiidalab_qe/common/link_button/static/: link_button.css
src/aiidalab_qe/common/process/: __init__.py  process.py  tree.py
src/aiidalab_qe/config/: environment.py
src/aiidalab_qe/guides/: 0_Basic tutorial (relaxation, bands, PDOS).html  0_basic.html  1_Advanced settings.html  1_advanced.html  1_advanced_settings.html  2_Ferromagnetism & DFT+U.html  2_ferromagnetism_and_DFT+U.html  3_Antiferromagnetism.html  3_antiferromagnetism.html
src/aiidalab_qe/parameters/: __init__.py  qeapp.yaml
src/aiidalab_qe/plugins/: utils.py
src/aiidalab_qe/plugins/bands/: __init__.py  bands_workchain.py  code.py  model.py  resources.py  result.py  setting.py  workchain.py
src/aiidalab_qe/plugins/bands/guides/: 0_basic.html  bands.html
src/aiidalab_qe/plugins/bands/result/: __init__.py  model.py  result.py
src/aiidalab_qe/plugins/electronic_structure/: __init__.py  result.py
src/aiidalab_qe/plugins/electronic_structure/result/: __init__.py  model.py  result.py
src/aiidalab_qe/plugins/hp/: __init__.py  result.py  workchain.py
src/aiidalab_qe/plugins/pdos/: __init__.py  code.py  model.py  resources.py  result.py  setting.py  workchain.py
src/aiidalab_qe/plugins/pdos/result/: __init__.py  model.py  result.py
src/aiidalab_qe/plugins/pw_monitor/: __init__.py  result.py
src/aiidalab_qe/plugins/xas/: __init__.py  code.py  model.py  pseudo_toc.yaml  resources.py  result.py  setting.py  workchain.py
src/aiidalab_qe/plugins/xas/result/: __init__.py  model.py  result.py  spectrum_button.py  utils.py
src/aiidalab_qe/plugins/xas/structure_examples/: __init__.py
src/aiidalab_qe/plugins/xps/: __init__.py  model.py  resources.py  result.py  setting.py  workchain.py
src/aiidalab_qe/plugins/xps/result/: __init__.py  model.py  result.py  utils.py
src/aiidalab_qe/plugins/xps/structure_examples/: Phenylacetylene.xyz  __init__.py
src/aiidalab_qe/setup/: __init__.py  codes.py  pseudos.py  setup_codes.py  setup_pseudos.py
src/aiidalab_qe/workflows/: __init__.py  monitor.py
src/aiidalab_qe_workchain/: __init__.py
(+362 files in other folders)
