[build-system]
requires = [
    "setuptools>=62.6",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
show-fixes = true
output-format = "full"
target-version = "py39"

[tool.ruff.lint]
ignore = ["E501", "E402", "TRY003", "RUF012", "N806"]
select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "PLE",  # pylint error rules
  "PLW",  # pylint warning rules
  "PLC",  # pylint convention rules
  "RUF",  # ruff-specific rules
  "TRY",  # Tryceratops
  "UP"    # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]
"tests_integration/*" = ["ARG001"]
