[metadata]
name = aiidalab_qe
version = 24.10.0a0
description = Package for the AiiDAlab QE app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-qe
author = Carl Simon Adorf, Aliaksandr Yakutovich, Marnik Bercx, Jusong Yu
author_email = aiidalab@materialscloud.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-qe/issues
    Documentation = https://github.com/aiidalab/aiidalab-qe#readme
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-qe/master/miscellaneous/logos/QE.jpg

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiida-core~=2.2,<3
    Jinja2~=3.0
    aiida-quantumespresso~=4.6
    aiidalab-widgets-base[optimade]~=2.2.0
    aiida-pseudo~=1.4
    filelock~=3.8
    importlib-resources~=5.2
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    bumpver~=2023.1124
    pre-commit~=3.2
    pytest~=6.2
    pytest-regressions~=2.2
    pgtest==1.3.1
    pytest-cov~=4.0

[options.package_data]
aiidalab_qe.app.parameters = qeapp.yaml
aiidalab_qe.app.static = *
aiidalab_qe.app.structure.examples = *
aiidalab_qe.plugins.xas = pseudo_toc.yaml

[options.entry_points]
aiidalab_qe.properties =
    bands = aiidalab_qe.plugins.bands:bands
    pdos = aiidalab_qe.plugins.pdos:pdos
    xps = aiidalab_qe.plugins.xps:xps
    electronic_structure = aiidalab_qe.plugins.electronic_structure:electronic_structure
    xas = aiidalab_qe.plugins.xas:xas

[aiidalab]
title = Quantum ESPRESSO
description = Perform Quantum ESPRESSO calculations
categories =
    quantum

[bumpver]
current_version = "v24.10.0a0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True
pre_commit_hook = ./bumpver_pre_commit.sh

[bumpver:file_patterns]
src/aiidalab_qe/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
docs/source/conf.py =
    version = "{version}"
