[metadata]
name = aiidalab_qe
version = 24.10.0a7
description = Package for the AiiDAlab QE app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-qe
author = AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-qe/issues
    Documentation = https://aiidalab-qe.readthedocs.io/
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-qe/master/miscellaneous/logos/QE.jpg

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiida-core~=2.2,<3
    Jinja2~=3.0
    aiida-quantumespresso~=4.9
    aiidalab-widgets-base[optimade]==2.3.0a3
    aiida-pseudo~=1.4
    filelock~=3.8
    importlib-resources~=5.2
    aiida-wannier90-workflows==2.3.0
    anywidget==0.9.13
    table_widget~=0.0.2
    aiida-qe-xspec>=0.1.0a1
    shakenbreak~=3.3.1

python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    bumpver~=2023.1124
    pre-commit~=3.2
    pytest~=7.4
    pytest-regressions~=2.2
    pgtest==1.3.1
    pytest-cov~=5.0

[options.package_data]
aiidalab_qe.app.parameters = qeapp.yaml
aiidalab_qe.app.static.images = *
aiidalab_qe.app.static.styles = *.css
aiidalab_qe.app.static.templates = *.jinja
aiidalab_qe.app.structure.examples = *
aiidalab_qe.app.result.components.summary = schema.json

[options.entry_points]
aiidalab_qe.properties =
    bands = aiidalab_qe.plugins.bands:bands
    pdos = aiidalab_qe.plugins.pdos:pdos
    electronic_structure = aiidalab_qe.plugins.electronic_structure:electronic_structure

aiida.workflows =
    aiidalab_qe.bands_workchain = aiidalab_qe.plugins.bands.bands_workchain:BandsWorkChain

[aiidalab]
title = Quantum ESPRESSO
description = The Quantum ESPRESSO (QE) app is a web-based interface within AiiDAlab that allows users to perform first-principles calculations and analyze material properties (e.g., band structures) directly from their browser.
categories =
    quantum

[bumpver]
current_version = "v24.10.0a7"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True
pre_commit_hook = ./bumpver_pre_commit.sh

[bumpver:file_patterns]
src/aiidalab_qe/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
docs/source/conf.py =
    version = "{version}"
