[metadata]
name = aiidalab_qe_workchain
version = 23.4.3
description = Package for the AiiDAlab QE app workchain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-qe
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-qe/issues

[options]
packages = find:
install_requires =
    aiida-core~=2.2,<3
    aiida-quantumespresso~=4.2
python_requires = >=3.8

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
